# wiktionary_crawler

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: buildnightly.yml
src/: bin_crawl.rs  crawler.rs  lib.rs
